# rest-api-python-docker-deployment-latest

./: Dockerfile  Makefile  README.md  pyproject.toml
src/com_restapi_example/controller/: api_controller.py
tests/: test_handler.py
