[tool.poetry]
name = "restapi-example"
version = "1.0.0"
description = "Python service - restapi-example"
authors = ["Dhananjaya <dhananjaya.singhar@gmail.com>"]
readme = "README.md"
packages = [{include ="com_restapi_example", from="src" }]
#include = ["src/com_restapi_example/config/cert.pem"]

#[[tool.poetry.source]]
#name =  "artifacts"
#url = "<path_to_private_repo/artifactory/api/pypi/pypi/simple>"
#priority = "default"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.25.0"
requests = "^2.32.3"
pyaml-env = "^1.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pre-commit = "3.6.2"
pre-commit-hooks = "4.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
